# my_robot_ws

./: 2023-12-19-20-39-48.bag  2023-12-19-20-42-44.bag  2023-12-19-20-45-58.bag  2023-12-19-20-47-18.bag  2023-12-19-20-49-08.bag  2023-12-19-20-49-47.bag  readme.md
src/can_drive/: CMakeLists.txt  package.xml
src/can_drive/include/can_drive/: canbus.h
src/can_drive/src/: can_main.cpp  canbus.cpp
src/hsv_control/: CMakeLists.txt  package.xml
src/paper_code/: CMakeLists.txt  package.xml
src/paper_code/config/: cyl_model_params.json  cyl_nmpc_params.json
src/paper_code/script/: cylinder_nmpc.py  cylinder_pid.py  nmpc_controller.py  pure_persuit.py
src/paper_code/src/: cmd_msg_pub.cpp
src/params_identify/: CMakeLists.txt  package.xml
src/params_identify/script/: pump_flow_test.py
src/params_identify/src/: cmd_pub.cpp  cylinder_model.cpp
src/robot_arm/: CMakeLists.txt  package.xml
src/robot_arm/include/robot_arm/: dataturnto.h
src/robot_arm/launch/: robot_arm.launch
src/robot_arm/src/: dataturnto.cpp  joy_move copy.cpp  joy_move.cpp  modbus_master.cpp
src/robot_msgs/: CMakeLists.txt  package.xml
src/robot_msgs/msg/: Canopen.msg  Cylinder_Cmd.msg  Cylinder_States.msg  Joint_Cmd.msg  Joint_States.msg  Pump_Cmd.msg  Pump_States.msg
src/robot_msgs/srv/: grab_put.srv  mcs_cmd.srv  mcs_function.srv  tensor_camera.srv
src/teleop_key/: CMakeLists.txt  package.xml
src/teleop_key/src/: key_ctrl.cpp
